@@ -41,6 +41,7 @@ else
 if USEELFSYMS
 # ELF symbol file reader only
 SYMF_SRCS       += elfsyms.c
+SYMF_SRCS       += elfdlmap.c
 else
 # no symbol file reader at all,
 # builtin symtab only
@@ -99,6 +100,7 @@ endif
 SRCS = cexplock.h ctyps.h  cexpsyms.h  cexpsymsP.h
 SRCS+= cexp.c ctyps.c cexpsyms.c vars.c rshload.c cexplock.c
 SRCS+= cexpmod.h cexpmodP.h cexpmod.c vars.h cexp.tab.c cexp.tab.h
+SRCS+= elfdlmap.h
 SRCS+= cexpsegsP.h cexp_regex.h teclastuff.h rtems-hackdefs.h
 SRCS+= @srcdir@/getopt/mygetopt_r.c @srcdir@/getopt/mygetopt_r.h context.h
 SRCS+= help.c
